<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
>

    <!-- An invisible view aligned to the center of the parent. Allows other
    views to be arranged on either side -->
    <View
        android:id="@+id/centerShim"
        android:layout_height="wrap_content"
        android:layout_width="16dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true">


    </View>

    <!--Set width to match_parent sets maximum width. alignParentLeft aligns
    the left edge of this view with the left edge of its parent. toLeftOf
    sets the right edge of this view to align with the left edge of the
    given view. The result of all three settings is that this view will
    always take up exactly half of the width of its parent, however wide
    that may be. -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:hint="@string/name_inputReq">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>
<!--    <EditText-->
<!--        -->
<!--        android:hint="@string/name_input" />-->

    <!--Same deal, but on the right -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/centerShim"
        android:hint="@string/lastName_inputReq">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/name_field"
        android:layout_toStartOf="@+id/centerShim"
        android:hint="@string/password_inputReq">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPassword_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/lastName_field"
        android:layout_toEndOf="@+id/centerShim"
        android:hint="@string/password_inputReq">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumber_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/password_field"
        android:layout_toStartOf="@+id/centerShim"
        android:hint="@string/phoneNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bornDate_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/repeatPassword_field"
        android:layout_toEndOf="@+id/centerShim"
        android:hint="@string/bornDate">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/regButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/phoneNumber_field"
        android:layout_toLeftOf="@+id/centerShim"
        android:text="@string/register" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regButton"
        android:text="* Requerido">
    </TextView>
</RelativeLayout>